fix social-link spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1784,7 +1784,7 @@ ul.social-links li {
 }
 
 ul.social-links li:not(:first-child) {
-  margin: 20px 20px 0 20px;
+  margin: 20px 0 0 20px;
 }
 
 div.user-info {
